styles.css
body {
    box-sizing: border-box;
    /*font-family: Roboto, 'Times New Roman', Times, sans-serif;*/
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: 18px;
    margin: 0;
    min-height: 100vh;
}

.header {
    background: #1f2937;
    display: flex;
    flex-flow: row nowrap;
    justify-content: center;
    align-items: center;
    font-size: 24px;
    font-weight: 700;
    color: whitesmoke;
    gap: 560px;
    padding-bottom: 50px;
}

.subheader {
    display: flex;
    justify-content: center;
    gap: 270px;
    background: #1f2937;
    padding-bottom: 50px;
}

.blc {
    color: whitesmoke;
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
    align-items: flex-start;
    width: 400px;
    gap: 10px;
}

ul {
    font-weight: 400;
    list-style-type: none;
    padding: 0;
    margin: 0;
    gap: 16px;
    font-size: 18px;
    display: flex;
}

h1 {
    margin: 0;
}

a {
    text-decoration: none;
    color: whitesmoke;
}

a:hover {color: #808080;}
a:active {background-color: #808080;}

p {
    margin: 0;
}

.this-website-is-awesome {
    font-size: 48px;
    font-weight: 800;
}

img {
    width: 400px;
    max-height: 250px;
}

button {
    background: #3882f6;
    color: whitesmoke;
    padding: 8px 24px;
    border: none;
    border-radius: 8px;
    cursor: pointer;
    font-size: 18px;
    font-weight: 800;
}

button:hover {background-color: #0047b3;}
button:active {
    background-color: #0047b3;
    transform: translateY(4px);
}

.informationheader {
    font-size: 36px;
    text-align: center;
    font-weight: 800;
    padding: 30px;
    color: #1f2937;
}

.emptyframe {
    width: 200px;
    height: 200px;
    border: 4px solid #3882f6;
    border-radius: 10px;
}

.row-of-img {
    display: flex;
    flex-flow: row nowrap;
    justify-content: center;
    gap: 125px;
}

.alignment {
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
    width: 150px;
    color: #595959;
}

.textcentering {
    text-align: center;
}

.quotesection {
    background: #e5e7eb;
    display: flex;
    flex-flow: column nowrap;
    padding: 100px;
    align-content: space-between;
}

.quote {
    align-self: center;
    font-size: 36px;
    width: 750px;
    color: #1f2937;
}

.author {
    font-weight: 800;
    margin-left: 425px;
    align-self: center;
}

.calltoaction {
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-around;
    align-items: center;
    margin: 125px;
    background: #3882f6;
    padding: 75px;
    color: whitesmoke;
    border-radius: 10px;
    gap: 600px;
    flex-shrink: 0.5;
}

.bold {
    font-weight: 800;
    font-size: 24px;
}

.bottombutton {
    border: 2px solid whitesmoke;
}

.footer {
    display: flex;
    flex-flow: row nowrap;
    justify-content: center;
    align-items: center;
    background: #1f2937;
    color: whitesmoke;
    padding: 25px;
}

